Commit 12 clases: cambios en receta.xhtml

--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -147,7 +147,7 @@
                     </h:link> 
                     <br />  
                     <h:link value="#{messages['recetas.admin']}" rendered="#{true}" 
-                            outcome="/pages/farmacia/recetas">                    
+                            outcome="/pages/farmacia/receta/recetas">                    
                     </h:link> 
                 </p:panel>
             </h:panelGroup>
